# lgtm-cat-api

./: .dockerignore  .envrc.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml  task-definition-prod.json  task-definition-stg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-prod.yml  deploy-stg.yml
.serena/: project.yml
docker/mysql/: init.sql  my.cnf
docker/nginx/: Dockerfile
docker/nginx/config/: default.template  nginx.conf
src/: CLAUDE.md  config.py  main.py
src/domain/: create_lgtm_image.py  lgtm_image.py  lgtm_image_errors.py  lgtm_image_object.py
src/domain/repository/: jwt_token_verifier_repository_interface.py  lgtm_image_repository_interface.py  object_storage_repository_interface.py  s3_repository_interface.py  token_verifier_repository_interface.py  unique_id_generator_interface.py
src/infrastructure/: cognito_token_verifier_repository.py  database.py  lgtm_image_repository.py  models.py  s3_repository.py  uuid_generator.py
src/lgtm_cat_api/: __init__.py
src/log/: formatter.py  logger.py  request_id.py
src/presentation/controller/: health_check_controller.py  lgtm_image_controller.py  lgtm_image_request.py  lgtm_image_response.py  response_helper.py
src/presentation/dependencies/: auth.py
src/presentation/middleware/: logging_middleware.py  request_id_middleware.py
src/presentation/router/: health_check_router.py  lgtm_image_router.py
src/sentry/: initializer.py
src/usecase/: create_lgtm_image_usecase.py  extract_random_lgtm_images_usecase.py  retrieve_recently_created_lgtm_images_usecase.py
tests/: CLAUDE.md  TESTING_GUIDE.md  conftest.py
tests/domain/: test_create_lgtm_image.py  test_lgtm_image.py  test_lgtm_image_object.py
tests/fixtures/: planetscale_schema.py  test_data_helpers.py  test_database.py
tests/infrastructure/: test_cognito_token_verifier_repository.py  test_lgtm_image_repository.py  test_uuid_generator.py
tests/presentation/controller/: test_lgtm_image_controller.py  test_response_helper.py
tests/presentation/dependencies/: __init__.py  test_auth.py
tests/sentry/: test_initializer.py
tests/usecase/: __init__.py  test_create_lgtm_image_usecase.py  test_extract_random_lgtm_images_usecase.py  test_retrieve_recently_created_lgtm_images_usecase.py
