[project]
name = "lgtm-cat-api"
version = "0.1.0"
description = "LGTMeowで利用するWebAPI"
authors = [
    { name = "kobayashi-m42", email = "m42kobayashi@gmail.com" }
]
dependencies = [
    "asyncmy>=0.2.10",
    "fastapi>=0.115.0",
    "greenlet>=3.2.4",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.30.6",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "ruff>=0.6.8",
    "mypy>=1.11.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=4.1.0",
    "aiohttp>=3.13.1",
    "cryptography>=46.0.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
